Logo updations and alignment issue fixes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -59,16 +59,16 @@
   margin-right: auto;
 }
 
+.mb-0{
+  margin-bottom: 0px;
+}
+
 .mb-1\.5{
   margin-bottom: 0.375rem;
 }
 
 .mb-1{
   margin-bottom: 0.25rem;
-}
-
-.mb-0{
-  margin-bottom: 0px;
 }
 
 .mt-8{
@@ -91,28 +91,16 @@
   display: none;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .h-8{
   height: 2rem;
 }
 
 .w-full{
   width: 100%;
-}
-
-.w-80{
-  width: 20rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-52{
-  width: 13rem;
-}
-
-.w-auto{
-  width: auto;
 }
 
 .w-10{
@@ -189,11 +177,6 @@
   background-color: transparent;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -219,9 +202,12 @@
   padding-bottom: 0.25rem;
 }
 
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.pt-4{
+  padding-top: 1rem;
+}
+
+.pb-40{
+  padding-bottom: 10rem;
 }
 
 .pb-4{
@@ -232,42 +218,6 @@
   padding-bottom: 0.5rem;
 }
 
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pb-20{
-  padding-bottom: 5rem;
-}
-
-.pt-6{
-  padding-top: 1.5rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pb-24{
-  padding-bottom: 6rem;
-}
-
-.pb-28{
-  padding-bottom: 7rem;
-}
-
-.pb-32{
-  padding-bottom: 8rem;
-}
-
-.pb-36{
-  padding-bottom: 9rem;
-}
-
-.pb-40{
-  padding-bottom: 10rem;
-}
-
 .text-left{
   text-align: left;
 }
@@ -276,9 +226,9 @@
   text-align: center;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xl{
@@ -299,11 +249,6 @@
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-semibold{
@@ -460,14 +405,6 @@ input:focus{
 }
 
 @media (min-width: 768px){
-  .md\:w-80{
-    width: 20rem;
-  }
-
-  .md\:w-72{
-    width: 18rem;
-  }
-
   .md\:w-64{
     width: 16rem;
   }
@@ -488,14 +425,14 @@ input:focus{
     border-style: solid;
   }
 
-  .md\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
   .md\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
 
@@ -506,10 +443,6 @@ input:focus{
 
   .lg\:inline-block{
     display: inline-block;
-  }
-
-  .lg\:w-80{
-    width: 20rem;
   }
 
   .lg\:grid-cols-3{
@@ -532,11 +465,6 @@ input:focus{
 }
 
 @media (min-width: 1280px){
-  .xl\:py-10{
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
   .xl\:py-12{
     padding-top: 3rem;
     padding-bottom: 3rem;
